discussion/kv_engine/160152/160152_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48038: Add CheckpointVisitor::memToRelease

This is the first of a set of patches for moving all the checkpoint
memory-release logic from the CheckpointRemoverTask to the
VBCBAdaptor/CheckpointVisitor fixture.

While the short-term goal is to get rid of some complexity in the
CheckpointRemoverTask, our medium-term goal also to remove any
periodic scheduling of the task for avoiding the current "busy
polling" model that keeps CPUs busy for nothing. Note that the
CheckpointRemoverTask is just one among many tasks that follow the same
model.

So in the short-term (ie, this serie of patches):
- I move most of the logic that actually releases checkpoint-memory from
  the CheckpointRemoverTask to the CheckpointVisitor
- Between CheckpointRemoverTask and VBCBAdaptor/CheckpointVisitor we
  keep the latter beacuse that already implements the
  PausableVBucketVisitor execution-yield mechanism that we want to
  maintain
- For now we cannot remove completely the CheckpointRemoverTask as we
  need the periodic scheduling until we implement the proper
  (event-driven) trigger logic for the CheckpointVisitor.
- So, after this serie of patches the CheckpointRemoverTask will be
  responsible only for (1) running periodically and (2) launching a
  VBCBAdaptor/CheckpointVisitor run.

In this patch I start with adding the CheckpointVisitor::memToRelease
member that will be used by the Visitor for knowing how much memory it
has to release from checkpoints before stopping its execution.

Change-Id: I9670519740a6122dd877a617b2c518bbecd390c3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-08-26 07:09:15.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-26 07:19:49.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38970/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38970/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11609/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_remover.cc:186:79: error: expected expression [clang-diagnostic-error]
    auto pv = std::make_unique<CheckpointVisitor>(kvBucket, stats, available, );
                                                                              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11609/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_remover.cc:186:79:
error: expected expression [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11609/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33203/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_remover.cc:186:79:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33203/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1251/ : FAILURE

Compile error at [2021-08-26T07:11:01.882Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/checkpoint_remover.cc:186:79:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1251/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12354/ : FAILURE

Compile error at [2021-08-26T07:12:21.315Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/checkpoint_remover.cc:186:79:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12354/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13218/ : FAILURE

Compile error at [2021-08-26T07:11:49.907Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/checkpoint_remover.cc:186:79:
error: expected primary-expression before ?)? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13218/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13822/ : FAILURE

Compile error at [2021-08-26T07:10:31.845Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/checkpoint_remover.cc:186:79:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13822/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13440/ : FAILURE

Compile error at [2021-08-26T07:11:24.170Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/checkpoint_remover.cc:186:79:
error: expected primary-expression before ?)? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13440/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1265/ : FAILURE

Compile error at [2021-08-26T07:12:24.067Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/checkpoint_remover.cc:186:79:
error: expected primary-expression before ?)? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1265/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21361/ : FAILURE

Compile error at [2021-08-26T07:11:41.870Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/checkpoint_remover.cc:186:79:
error: expected expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21361/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10388/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
